hello-daemon.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: hello
  name: hello
spec:
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: bob2606/hello-http:0.8.26
        name: hello-http
        resources: {}
