hello-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  strategy: {}
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: bob2606/hello-http:0.8.26
        name: hello-http
        ports:
        - name: www
          containerPort: 8080
        resources: {}
