hello-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: hello
  name: hello
spec:
  containers:
  - image: bob2606/hello-http:0.8.26
    name: hello
  dnsPolicy: ClusterFirst
  restartPolicy: Always
