hello-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 3
  serviceName: hello
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: bob2606/hello-http:0.8.26
        name: hello-http
        ports:
        - name: hello
          containerPort: 80
        volumeMounts:
        - name: status
          mountPath: /var/lib/hello-http

      volumes:
      - name: status
        emptyDir:
