wwwphp-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: www
  name: www
spec:
  replicas: 1
  selector:
    matchLabels:
      app: www
  strategy: {}
  template:
    metadata:
      labels:
        app: www
    spec:
      containers:
      - image: nginx:1.26
        name: nginx
        ports:
        - name: www
          containerPort: 80
        resources: {}
        readinessProbe:
          httpGet:
            port: 80
            path: /index.html
          periodSeconds: 2
          failureThreshold: 2
        livenessProbe:
          httpGet:
            port: 80
            path: /index.html
          periodSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: partagenfs
          mountPath: /usr/share/nginx/html
          subPath: siteweb
      - image: php:8.2-fpm
        name: php
        volumeMounts:
        - name: partagenfs
          mountPath: /var/www/html
          subPath: siteweb
        - name: partagenfs
          mountPath: /var/lib/mysql
          subPath: datadb
        resources: {}

      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
      - name: partagenfs
        nfs:
          server: 172.18.0.1
          path: /
