www-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: www
  name: www
spec:
  clusterIP: 172.16.10.10
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: www
