labo-egress-netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: labo-egress
  namespace: labo
spec:
  podSelector:
  egress: []
  policyTypes:
  - Egress
