labo-egress-nslook-netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: labo-egress
  namespace: labo
spec:
  podSelector:
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  policyTypes:
  - Egress
